src/objects/LearningResourceAccessInstructions__c.object
<CustomObject>
    <description>Object to host student learning resource instructions</description>
    <fields>
        <fullName>AccessCode__c</fullName>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseID__c</fullName>
        <label>Course ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSentPK__c</fullName>
        <description>External ID for Salesforce object coming from Primary Key in Oracle table that feeds it</description>
        <externalId>true</externalId>
        <label>EmailSentPK</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JEMEmail__c</fullName>
        <label>JEM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendInstructions__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p2_lkid=&quot;&amp;Student__r.Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;rtype=003&amp;retURL=/&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000239vk&amp;oid=00Df0000002MhY1&quot;,&quot;Send Email&quot;),&quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**Pending**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**Registered**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**Web Registered**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop/Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal From Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Learning Resource Access Instructions</relationshipLabel>
        <relationshipName>LearningResourceAccessInstructions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLforLogin__c</fullName>
        <label>URL for Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLforRegistration__c</fullName>
        <label>URL for Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Learning Resource Access Instructions</relationshipLabel>
        <relationshipName>LearningResourceAccessInstructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Resource Access Instructions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Term__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>LearningResourcesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LRJEMBusinessCollege</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Term__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Drop/Delete,DROP,Completed,**Registered**</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>notContain</operation>
            <value>has dropped</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>has enrolled in &quot;JHT2 Simulation: The Business Strategy Game&quot;.</value>
        </filters>
        <label>Learning Resources JEM Business College</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LearningResourcesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LRJEMHealthProfessions</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Term__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Drop/Delete,DROP,Completed</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>has enrolled in &quot;AHIMA</value>
        </filters>
        <label>Learning Resources JEM Health Profession</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LearningResourcesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LRJEMInformationTechnology</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Term__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Drop/Delete,DROP,Completed</value>
        </filters>
        <filters>
            <field>Vendor__c</field>
            <operation>equals</operation>
            <value>MeasureUp,AHIMA</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>notify WGU,student failure,student success</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>has enrolled in &quot;AHIMA,has enrolled in &quot;MeasureUp</value>
        </filters>
        <label>Learning Resources JEM Information Tech</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LearningResourcesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LRJEMTeachersCollege</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Term__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Vendor__c</field>
            <operation>equals</operation>
            <value>McGraw-Hill,Key Curriculum Press,AMNH</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>&quot;McGraw-Hill M,&quot;,&quot;Dinosaurs,&quot;,&quot;Earth,&quot;,Genetics</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>&quot;How to Think About,&quot;,&quot;In the Field,&quot;,&quot;Evolution,&quot;</value>
        </filters>
        <label>Learning Resources JEM Teachers College</label>
        <sharedTo>
            <roleAndSubordinatesInternal>IT_Group</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LearningResourcesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Instructions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Resource Access Instructions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>